--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "config": "^1.21.0",
     "dotenv": "^2.0.0",
     "express": "^3.21.2",
+    "file-system": "^2.2.2",
     "lodash": "^3.10.1",
     "node.extend": "^1.1.5",
     "punycode": "^2.0.0",
