--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "aws-sdk": "^2.45.0",
     "babel-preset-stage-1": "^6.1.18",
+    "body-parser": "^1.9.2",
     "config": "^1.21.0",
+    "crypto": "^0.0.3",
     "dotenv": "^2.0.0",
     "express": "^3.21.2",
     "file-system": "^2.2.2",
+    "https": "^1.0.0",
     "lodash": "^3.10.1",
     "node.extend": "^1.1.5",
     "punycode": "^2.0.0",
@@ -31,9 +35,12 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
+    "s3": "^4.4.0",
+    "sns-validator": "^0.3.0",
     "socket.io": "~1.4.8",
     "twit": "^2.2.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
