--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.45.0",
+    "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.9.2",
     "config": "^1.21.0",
@@ -29,13 +30,19 @@
     "https": "^1.0.0",
     "lodash": "^3.10.1",
     "node.extend": "^1.1.5",
+    "nodemailer": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-local-sequelize": "^0.7.0",
+    "pg": "^6.1.5",
     "punycode": "^2.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
+    "react-router": "^3.0.0",
     "redux": "^3.0.4",
     "s3": "^4.4.0",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "sns-validator": "^0.3.0",
     "socket.io": "~1.4.8",
     "twit": "^2.2.4",
