--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-sdk": "^2.45.0",
     "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.1.18",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.9.2",
     "config": "^1.21.0",
     "crypto": "^0.0.3",
@@ -32,7 +33,7 @@
     "node.extend": "^1.1.5",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
-    "passport-local-sequelize": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.5",
     "punycode": "^2.0.0",
     "react": "^0.14.3",
