--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.1.18",
     "bcrypt": "^1.0.2",
-    "body-parser": "^1.9.2",
+    "body-parser": "^1.17.1",
     "config": "^1.21.0",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.1",
     "crypto": "^0.0.3",
     "dotenv": "^2.0.0",
     "express": "^3.21.2",
     "file-system": "^2.2.2",
     "https": "^1.0.0",
     "lodash": "^3.10.1",
+    "morgan": "^1.8.1",
     "node.extend": "^1.1.5",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
