--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-session": "^2.0.0-beta.1",
     "crypto": "^0.0.3",
     "dotenv": "^2.0.0",
+    "export-dir": "^0.1.2",
     "express": "^3.21.2",
     "file-system": "^2.2.2",
     "https": "^1.0.0",
@@ -41,12 +42,14 @@
     "punycode": "^2.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
+    "react-redux": "^4.4.8",
     "react-router": "^3.0.0",
-    "redux": "^3.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "s3": "^4.4.0",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
+    "sequelize-constants": "^1.0.0",
     "sns-validator": "^0.3.0",
     "socket.io": "~1.4.8",
     "twit": "^2.2.4",
