--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "express": "^3.21.2",
     "file-system": "^2.2.2",
     "https": "^1.0.0",
+    "jsonwebtoken": "^7.4.0",
     "lodash": "^3.10.1",
     "morgan": "^1.8.1",
     "node.extend": "^1.1.5",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^2.2.1",
     "pg": "^6.1.5",
     "punycode": "^2.0.0",
     "react": "^0.14.3",
