--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "socket.io": "~1.4.8",
     "twit": "^2.2.4",
     "underscore": "^1.8.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
