--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Bradley",
   "main": "index.js",
   "private": true,
+  "engines": {
+    "node": "7.5.0"
+  },
   "babel": {
     "presets": [
       "es2015",
