--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dokku": {
-      "postdeploy": "npm install; sequelize db:migrate;"
+      "postdeploy": "sequelize db:migrate;"
     }
   }
 }
