--- a/.example.env
+++ b/.example.env
@@ -4,3 +4,4 @@ POSTGRES_DATABASE=alive2020_database
 POSTGRES_USERNAME=alive2020_database_user
 POSTGRES_PASSWORD=password123
 POSTGRES_HOST=localhost
+POSTGRES_PORT=1234
