adding postdeploy migrate

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dokku": {
-      "postdeploy": "dokku run alive2020-api sequelize db:migrate"
+      "postdeploy": "sequelize db:migrate"
     }
   }
 }
