--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
     "crypto": "^0.0.3",
+    "dateformat": "^2.0.0",
     "deasync": "^0.1.9",
     "dotenv": "^2.0.0",
     "export-dir": "^0.1.2",
     "express": "^3.21.2",
+    "express-json-views": "^0.1.0",
     "file-system": "^2.2.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^7.4.0",
@@ -56,7 +58,6 @@
     "sequelize-cli": "^2.7.0",
     "sequelize-constants": "^1.0.0",
     "sns-validator": "^0.3.0",
-    "socket.io": "~1.4.8",
     "twit": "^2.2.4",
     "underscore": "^1.8.3",
     "url": "^0.11.0",
