--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "alive2020",
-  "description": "Nothing yet.",
+  "name": "alive2020-server",
+  "description": "To be clarified.",
   "version": "0.0.1",
-  "author": "Bradley",
-  "main": "index.js",
+  "authors": [
+    "(bradley <bradley.j.griffith@gmail.com>)",
+    "(mark <mstultz@gmail.com>)"
+  ],
   "private": true,
   "engines": {
     "node": "7.5.0"
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
-  },
-  "scripts": {
-    "build": "webpack --config webpack.config.js --progress --profile --colors",
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
-  },
   "dependencies": {
     "aws-sdk": "^2.45.0",
     "axios": "^0.16.1",
-    "babel-preset-stage-1": "^6.1.18",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "config": "^1.21.0",
@@ -36,7 +25,6 @@
     "export-dir": "^0.1.2",
     "express": "^3.21.2",
     "express-json-views": "^0.1.0",
-    "file-system": "^2.2.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^7.4.0",
     "lodash": "^3.10.1",
@@ -46,35 +34,15 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "pg": "^6.1.5",
-    "punycode": "^2.0.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.4.8",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
     "s3": "^4.4.0",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "sequelize-constants": "^1.0.0",
     "sns-validator": "^0.3.0",
-    "twit": "^2.2.4",
     "underscore": "^1.8.3",
     "url": "^0.11.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "~1.13.0",
-    "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.0"
   }
 }
